--- a/apps/app2/tsconfig.app.json
+++ b/apps/app2/tsconfig.app.json
@@ -1,7 +1,13 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
+    "outDir": "dist",
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": true,
+    "importHelpers": true,
+    "strict": true,
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
     "jsx": "react-jsx",
     "lib": ["dom"],
@@ -12,9 +18,7 @@
       "vite/client"
     ],
     "rootDir": "../../",
-    "moduleResolution": "bundler",
-    "declaration": true,
-    "composite": true
+    "moduleResolution": "bundler"
   },
   "exclude": [
     "out-tsc",
@@ -23,31 +27,22 @@
     "src/**/*.test.ts",
     "src/**/*.spec.tsx",
     "src/**/*.test.tsx",
+    "src/**/*.spec.js",
     "src/**/*.test.js",
     "src/**/*.spec.jsx",
     "src/**/*.test.jsx",
-    "vite.config.ts",
-    "vite.config.mts",
-    "vitest.config.ts",
-    "vitest.config.mts",
     "eslint.config.js",
     "eslint.config.cjs",
     "eslint.config.mjs"
   ],
   "include": [
+    "src/**/*.js",
+    "src/**/*.jsx",
     "src/**/*.ts",
     "src/**/*.tsx",
-    "../../libs/shared-components/src/lib/**/*.ts",
-    "../../libs/shared-components/src/lib/**/*.tsx",
     "../../libs/shared-components/src/lib/**/*.js",
     "../../libs/shared-components/src/lib/**/*.jsx",
-    "../../libs/shared-components/src/lib/**/*.d.ts",
-    "../../libs/shared-components/src/lib/**/*.json",
-    "../../libs/shared-components/src/lib/**/*.css",
-    "../../libs/shared-components/src/lib/**/*.scss",
-    "../../libs/shared-components/src/lib/**/*.less",
-    "../../libs/shared-components/src/lib/**/*.svg",
-    "../../libs/shared-components/src/lib/**/*.png",
-    "../../libs/shared-components/src/lib/**/*.jpg"
+    "../../libs/shared-components/src/lib/**/*.ts",
+    "../../libs/shared-components/src/lib/**/*.tsx"
   ]
 }
