--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-router-dom": "6.29.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@nx/eslint": "21.1.2",
     "@nx/eslint-plugin": "21.1.2",
@@ -44,9 +46,11 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
+    "vite-plugin-dts": "~4.5.0",
     "vitest": "^3.0.0"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "libs/*"
   ]
 }
